@@ -1,3 +1,8 @@
+2013-01-04 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* godmode/agentes/module_manager.php: Added link to module library
+	on module creation view.
+
 2013-01-03 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* extensions/agents_modules.php,
